// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages reducer handles actions - appendNewMessages when there are new messages 1`] = `
Immutable.Map {
  "test-channel-1": Immutable.ChannelMessages {
    "messages": Immutable.List [],
    "newMessages": Immutable.List [
      "message-id-0",
      "message-id-1",
      "message-id-2",
      "message-id-3",
      "message-id-4",
    ],
  },
}
`;

exports[`messages reducer handles actions - appendNewMessages when there are no new messages 1`] = `
Immutable.Map {
  "test-channel-1": Immutable.ChannelMessages {
    "messages": Immutable.List [],
    "newMessages": Immutable.List [
      "message-id-0",
      "message-id-1",
      "message-id-2",
    ],
  },
}
`;

exports[`messages reducer handles actions - cleanNewMessages when there are new messages 1`] = `
Immutable.Map {
  "test-channel-1": Immutable.ChannelMessages {
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
  },
}
`;

exports[`messages reducer handles actions - cleanNewMessages when there are no new messages 1`] = `Immutable.Map {}`;

exports[`messages reducer handles actions - setMessages overwrites messages 1`] = `
Immutable.Map {
  "test-channel-1": Immutable.ChannelMessages {
    "messages": Immutable.List [
      Immutable.Map {
        "id": "test-message-3",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-3",
        "signature": Object {
          "data": Array [
            159,
            209,
            70,
            21,
            56,
            186,
            14,
            79,
            10,
            210,
            240,
            22,
            236,
            200,
            47,
            104,
            61,
            128,
            251,
            15,
            236,
            133,
            59,
            217,
            31,
            235,
            250,
            9,
            27,
            72,
            237,
            180,
            7,
            5,
            110,
            48,
            149,
            113,
            171,
            203,
            154,
            203,
            149,
            134,
            89,
            239,
            165,
            144,
            209,
            158,
            104,
            233,
            194,
            139,
            7,
            160,
            236,
            178,
            61,
            63,
            132,
            84,
            143,
            210,
          ],
          "type": "Buffer",
        },
      },
      Immutable.Map {
        "id": "test-message-4",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-4",
        "signature": Object {
          "data": Array [
            193,
            63,
            82,
            164,
            206,
            212,
            226,
            214,
            112,
            213,
            77,
            103,
            232,
            193,
            112,
            253,
            181,
            181,
            73,
            54,
            4,
            30,
            33,
            0,
            191,
            48,
            198,
            162,
            109,
            133,
            0,
            88,
            114,
            23,
            160,
            223,
            227,
            143,
            129,
            95,
            18,
            228,
            64,
            39,
            237,
            170,
            107,
            132,
            249,
            112,
            233,
            28,
            218,
            83,
            81,
            50,
            209,
            35,
            145,
            29,
            166,
            181,
            25,
            159,
          ],
          "type": "Buffer",
        },
      },
    ],
    "newMessages": Immutable.List [],
  },
}
`;

exports[`messages reducer handles actions - setMessages sets messages when empty 1`] = `
Immutable.Map {
  "test-channel-1": Immutable.ChannelMessages {
    "messages": Immutable.List [
      Immutable.Map {
        "id": "test-message-0",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-0",
        "signature": Object {
          "data": Array [
            212,
            30,
            12,
            93,
            219,
            205,
            218,
            187,
            235,
            66,
            234,
            95,
            58,
            210,
            24,
            253,
            242,
            116,
            161,
            173,
            143,
            233,
            184,
            64,
            114,
            85,
            131,
            198,
            33,
            121,
            112,
            237,
            112,
            32,
            148,
            97,
            109,
            23,
            222,
            39,
            148,
            101,
            2,
            162,
            54,
            40,
            191,
            23,
            161,
            20,
            205,
            28,
            140,
            98,
            60,
            91,
            98,
            252,
            109,
            245,
            160,
            218,
            124,
            187,
          ],
          "type": "Buffer",
        },
      },
      Immutable.Map {
        "id": "test-message-1",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-1",
        "signature": Object {
          "data": Array [
            0,
            249,
            158,
            109,
            167,
            225,
            94,
            137,
            103,
            18,
            202,
            15,
            154,
            119,
            153,
            216,
            44,
            248,
            239,
            79,
            88,
            214,
            133,
            191,
            148,
            56,
            119,
            111,
            19,
            96,
            0,
            198,
            108,
            170,
            231,
            139,
            209,
            134,
            29,
            245,
            128,
            109,
            167,
            111,
            19,
            222,
            182,
            59,
            165,
            71,
            19,
            47,
            222,
            185,
            178,
            188,
            7,
            98,
            9,
            90,
            118,
            236,
            117,
            157,
          ],
          "type": "Buffer",
        },
      },
      Immutable.Map {
        "id": "test-message-2",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-2",
        "signature": Object {
          "data": Array [
            234,
            142,
            72,
            55,
            6,
            92,
            170,
            231,
            250,
            103,
            40,
            28,
            69,
            60,
            158,
            33,
            233,
            48,
            203,
            3,
            102,
            249,
            94,
            114,
            210,
            242,
            184,
            60,
            238,
            88,
            137,
            11,
            58,
            21,
            120,
            209,
            207,
            149,
            164,
            168,
            4,
            11,
            69,
            253,
            60,
            195,
            169,
            113,
            84,
            6,
            56,
            227,
            98,
            230,
            111,
            244,
            230,
            96,
            240,
            80,
            204,
            0,
            204,
            143,
          ],
          "type": "Buffer",
        },
      },
    ],
    "newMessages": Immutable.List [],
  },
  "test-channel-2": Immutable.ChannelMessages {
    "messages": Immutable.List [
      Immutable.Map {
        "id": "test-message-3",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-3",
        "signature": Object {
          "data": Array [
            159,
            209,
            70,
            21,
            56,
            186,
            14,
            79,
            10,
            210,
            240,
            22,
            236,
            200,
            47,
            104,
            61,
            128,
            251,
            15,
            236,
            133,
            59,
            217,
            31,
            235,
            250,
            9,
            27,
            72,
            237,
            180,
            7,
            5,
            110,
            48,
            149,
            113,
            171,
            203,
            154,
            203,
            149,
            134,
            89,
            239,
            165,
            144,
            209,
            158,
            104,
            233,
            194,
            139,
            7,
            160,
            236,
            178,
            61,
            63,
            132,
            84,
            143,
            210,
          ],
          "type": "Buffer",
        },
      },
      Immutable.Map {
        "id": "test-message-4",
        "spent": "0.32",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is a message with id test-message-4",
        "signature": Object {
          "data": Array [
            193,
            63,
            82,
            164,
            206,
            212,
            226,
            214,
            112,
            213,
            77,
            103,
            232,
            193,
            112,
            253,
            181,
            181,
            73,
            54,
            4,
            30,
            33,
            0,
            191,
            48,
            198,
            162,
            109,
            133,
            0,
            88,
            114,
            23,
            160,
            223,
            227,
            143,
            129,
            95,
            18,
            228,
            64,
            39,
            237,
            170,
            107,
            132,
            249,
            112,
            233,
            28,
            218,
            83,
            81,
            50,
            209,
            35,
            145,
            29,
            166,
            181,
            25,
            159,
          ],
          "type": "Buffer",
        },
      },
    ],
    "newMessages": Immutable.List [],
  },
}
`;

exports[`messages reducer handles epics - fetch messages resolves pending messages 1`] = `Immutable.Map {}`;

exports[`messages reducer handles epics - fetch messages when has to calculate diff 1`] = `
Object {
  "criticalError": Immutable.CriticalError {
    "message": "",
    "traceback": "",
  },
  "messages": Immutable.OrderedMap {
    0: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon027dc4331327df226c32cb7244b951dfc442e487e36bff0b233ac4418b83ce3ea8",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon02eb1ae3baf33284937640479afeabb738326d21c7ed438126f7a70484307dce30",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-2-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon02462d3080bc99cb3ec1f03867a205f1b562fdcabb62ff578f6622f227b4c25b2e",
          },
          "createdAt": 1551956628,
          "message": "message 2 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress0",
        "tx-id-1-zs1testaddress0",
        "tx-id-2-zs1testaddress0",
      ],
    },
    1: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon031717e47dc514725aefba30fee5951eec3e1348b3686630ce09d2666fff9105d4",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon03047bea4e0fa41d9ad46353e57e7694156aa4bcc88f88d705cd69b12b456eb83f",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-2-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon0370c0ad534968fa63de16c35ec0a65d3fb7b7921460ea8876d19939b3a405f608",
          },
          "createdAt": 1551956628,
          "message": "message 2 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress1",
        "tx-id-1-zs1testaddress1",
        "tx-id-2-zs1testaddress1",
      ],
    },
  },
  "operations": Immutable.Map {},
}
`;

exports[`messages reducer handles epics - fetch messages when lastSeen not set 1`] = `
Object {
  "criticalError": Immutable.CriticalError {
    "message": "",
    "traceback": "",
  },
  "messages": Immutable.OrderedMap {
    0: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon027dc4331327df226c32cb7244b951dfc442e487e36bff0b233ac4418b83ce3ea8",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon02eb1ae3baf33284937640479afeabb738326d21c7ed438126f7a70484307dce30",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress0",
        "tx-id-1-zs1testaddress0",
      ],
    },
    1: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon031717e47dc514725aefba30fee5951eec3e1348b3686630ce09d2666fff9105d4",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon03047bea4e0fa41d9ad46353e57e7694156aa4bcc88f88d705cd69b12b456eb83f",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [],
    },
  },
  "operations": Immutable.Map {},
}
`;

exports[`messages reducer handles epics - fetch messages when new messages are sent by current identity 1`] = `
Object {
  "criticalError": Immutable.CriticalError {
    "message": "",
    "traceback": "",
  },
  "messages": Immutable.OrderedMap {
    0: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon027dc4331327df226c32cb7244b951dfc442e487e36bff0b233ac4418b83ce3ea8",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon02eb1ae3baf33284937640479afeabb738326d21c7ed438126f7a70484307dce30",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress0",
        "tx-id-1-zs1testaddress0",
      ],
    },
    1: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon031717e47dc514725aefba30fee5951eec3e1348b3686630ce09d2666fff9105d4",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon03047bea4e0fa41d9ad46353e57e7694156aa4bcc88f88d705cd69b12b456eb83f",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress1",
        "tx-id-1-zs1testaddress1",
      ],
    },
  },
  "operations": Immutable.Map {},
}
`;

exports[`messages reducer handles epics - fetch messages when no channel messages 1`] = `
Object {
  "criticalError": Immutable.CriticalError {
    "message": "",
    "traceback": "",
  },
  "messages": Immutable.OrderedMap {
    0: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon027dc4331327df226c32cb7244b951dfc442e487e36bff0b233ac4418b83ce3ea8",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon02eb1ae3baf33284937640479afeabb738326d21c7ed438126f7a70484307dce30",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress0",
        "tx-id-1-zs1testaddress0",
      ],
    },
    1: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon031717e47dc514725aefba30fee5951eec3e1348b3686630ce09d2666fff9105d4",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon03047bea4e0fa41d9ad46353e57e7694156aa4bcc88f88d705cd69b12b456eb83f",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress1",
        "tx-id-1-zs1testaddress1",
      ],
    },
  },
  "operations": Immutable.Map {},
}
`;

exports[`messages reducer handles epics - fetch messages when some messages are new 1`] = `
Object {
  "criticalError": Immutable.CriticalError {
    "message": "",
    "traceback": "",
  },
  "messages": Immutable.OrderedMap {
    0: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon027dc4331327df226c32cb7244b951dfc442e487e36bff0b233ac4418b83ce3ea8",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress0",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon02eb1ae3baf33284937640479afeabb738326d21c7ed438126f7a70484307dce30",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress0",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress0",
        "tx-id-1-zs1testaddress0",
      ],
    },
    1: Immutable.ChannelMessages {
      "messages": Immutable.List [
        Immutable.ReceivedMessage {
          "id": "tx-id-0-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon031717e47dc514725aefba30fee5951eec3e1348b3686630ce09d2666fff9105d4",
          },
          "createdAt": 1551963828,
          "message": "message 0 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
        Immutable.ReceivedMessage {
          "id": "tx-id-1-zs1testaddress1",
          "type": 1,
          "sender": Immutable.MessageSender {
            "replyTo": "",
            "username": "anon03047bea4e0fa41d9ad46353e57e7694156aa4bcc88f88d705cd69b12b456eb83f",
          },
          "createdAt": 1551960228,
          "message": "message 1 for zs1testaddress1",
          "spent": "0.0001",
          "isUnregistered": true,
          "tag": "",
          "offerOwner": "",
        },
      ],
      "newMessages": Immutable.List [
        "tx-id-0-zs1testaddress1",
        "tx-id-1-zs1testaddress1",
      ],
    },
  },
  "operations": Immutable.Map {},
}
`;
